Fix: Blog Detail page content spacing

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8651,7 +8651,7 @@ iframe {
   background-repeat: no-repeat;
 }
 .blog-details .blog-post-meta .post-data p {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   line-height: 2em;
 }
 .blog-details .blog-post-meta .post-data .quote-wrapper {
