--- a/public/assets/scss/_blog.scss
+++ b/public/assets/scss/_blog.scss
@@ -406,7 +406,7 @@
         }
         .post-data {
             p {
-                margin-bottom: 30px;
+                margin-bottom: 10px;
                 line-height: 2em;
             }
             .quote-wrapper {
